@@ -112,7 +112,8 @@ class WC_Subscriptions_Synchroniser {
 		// If it's an initial sync order and the total is zero, and nothing needs to be shipped, do not reduce stock
 		add_filter( 'woocommerce_order_item_quantity', __CLASS__ . '::maybe_do_not_reduce_stock', 10, 3 );
 
-		add_filter( 'woocommerce_subscriptions_recurring_cart_key', __CLASS__ . '::add_to_recurring_cart_key', 10, 2 );
+		add_filter( 'woocommerce_subscriptions_recurring_cart_key', __CLASS__ . '::add_to_recurring_product_grouping_key', 10, 2 );
+		add_filter( 'woocommerce_subscriptions_item_grouping_key', __CLASS__ . '::add_to_recurring_product_grouping_key', 10, 2 );
 
 		// Add defaults for our options.
 		add_filter( 'default_option_' . self::$setting_id_days_no_fee, array( __CLASS__, 'option_default' ), 10, 3 );
@@ -1207,18 +1208,27 @@ class WC_Subscriptions_Synchroniser {
 	}
 
 	/**
-	 * If the cart item is synced, add a '_synced' string to the recurring cart key.
+	 * Alters the subscription grouping key to ensure synced products are grouped separately.
 	 *
-	 * @since 1.0.0 - Migrated from WooCommerce Subscriptions v2.0
+	 * @param string                      $key  The subscription product's grouping key.
+	 * @param array|WC_Order_Item_Product $item The cart item or order item that the key is being generated for.
+	 *
+	 * @return string The subscription product grouping key with a synced product flag if the product is synced.
 	 */
-	public static function add_to_recurring_cart_key( $cart_key, $cart_item ) {
-		$product = $cart_item['data'];
+	public static function add_to_recurring_product_grouping_key( $key, $item ) {
+		$product = false;
 
-		if ( false === strpos( $cart_key, '_synced' ) && self::is_product_synced( $product ) ) {
-			$cart_key .= '_synced';
+		if ( is_a( $item, 'WC_Order_Item_Product' ) ) {
+			$product = $item->get_product();
+		} elseif ( is_array( $item ) && isset( $item['data'] ) ) {
+			$product = $item['data'];
 		}
 
-		return $cart_key;
+		if ( $product && false === strpos( $key, '_synced' ) && self::is_product_synced( $product ) ) {
+			$key .= '_synced';
+		}
+
+		return $key;
 	}
 
 	/**
@@ -1591,4 +1601,19 @@ class WC_Subscriptions_Synchroniser {
 		return $end_date;
 	}
 
+	/**
+	 * Alters the recurring cart item key to ensure synced products are grouped separately.
+	 *
+	 * @since 1.0.0 - Migrated from WooCommerce Subscriptions v2.0
+	 * @deprecated 6.5.0
+	 *
+	 * @param string $cart_key  The recurring cart item key.
+	 * @param array  $cart_item The cart item's data.
+	 *
+	 * @return string The cart item recurring cart key with a synced product flag if the product is synced.
+	 */
+	public static function add_to_recurring_cart_key( $cart_key, $cart_item ) {
+		wcs_deprecated_function( __METHOD__, '6.5.0', __CLASS__ . '::add_to_recurring_product_grouping_key' );
+		return self::add_to_recurring_product_grouping_key( $cart_key, $cart_item );
+	}
 }
